refacto and display more infos on message

--- a/src/components/Messenger.css
+++ b/src/components/Messenger.css
@@ -1,5 +1,4 @@
 .message {
-  padding: 12px;
   width: fit-content;
   margin-bottom: 6px;
   background: grey;
@@ -8,4 +7,8 @@
 .new-message {
   width: 100%;
   margin-bottom: 12px;
+}
+
+.private-box {
+  background-color: #f1f1f1;
 }
